<resources>
    <string name="app_name">MeNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AccountHint">手机号/邮箱</string>
    <string name="Password">密码</string>
    <string name="RememberPwd">记住密码</string>
    <string name="AutoLogIn">自动登陆</string>
    <string name="Register">注册</string>
    <string name="Login">登陆</string>
    <string name="VisitorHint">以游客身份登陆</string>
    <string name="ConfirmPwd">确认密码</string>
    <string name="cancel">取消</string>

    <string name="null_hint">账号或密码不能为空</string>
    <string name="not_equal_hint">两次输入的密码需保持一致</string>
    <string name="account_invalid_hint">用户名不是有效的手机号或邮箱</string>

    <string name="nav_history">历史记录</string>
    <string name="nav_collection">收藏</string>
    <string name="nav_setting">设置</string>
    <string name="nav_exit">退出</string>
    <string name="account_confirm">确认修改</string>
    <string name="update_pwd">新密码</string>
</resources>
